Adds functionality for staff notes on clients. Fixes #8

--- a/src/main/resources/templates/admin/client/add-client.html
+++ b/src/main/resources/templates/admin/client/add-client.html
@@ -35,6 +35,9 @@
                    data-focus="true"
                    placeholder="DeviantArt Username"/>
 
+            <label for="clientNote">Client Note</label>
+            <textarea id="clientNote" th:field="*{note}" placeholder="A private note about the client"></textarea>
+
             <input type="submit" class="button expanded" value="Create Client" />
         </form>
     </div>
