Adds audit support. Fixes #11

--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -126,3 +126,11 @@ td input[type='text'] {
 td.text-right input[type='text'] {
     text-align:right;
 }
+
+.table-scroll table td, .table-scroll table th {
+    white-space: nowrap;
+}
+
+.button.inline {
+    margin-bottom:0.2rem;
+}
