--- a/src/main/resources/templates/admin/client/view-client.html
+++ b/src/main/resources/templates/admin/client/view-client.html
@@ -128,7 +128,12 @@
     <div class="small-7 column small-centered">
         <p class="lead">
             Viewing inventory of <strong>[[${client.name}]]</strong>
-            <a class="tiny button inline secondary" th:href="@{/admin/audit/client/{id}(id=${client.id})}"><i class="fa fa-arrow-right"></i> Audit Client</a>
+            <a class="tiny button inline secondary" th:href="@{/admin/client/{id}/edit(id=${client.id})}">
+                <i class="fa fa-pencil"></i> Edit Client
+            </a>
+            <a class="tiny button inline secondary" th:href="@{/admin/audit/client/{id}(id=${client.id})}">
+                <i class="fa fa-arrow-right"></i> Audit Client
+            </a>
         </p>
         <th:block th:if="${client.note ne null and client.note.length() gt 0}">
             <div class="callout primary">
