feat(partials/header.html): Add logout button
fixes #22

--- a/src/main/resources/templates/partials/header.html
+++ b/src/main/resources/templates/partials/header.html
@@ -47,6 +47,7 @@
                 <li><a th:href="@{/admin/users}" th:class="${activePage == 'user' ? 'is-active' : ''}">Staff</a></li>
                 <li><a th:href="@{/admin/items}" th:class="${activePage == 'item' ? 'is-active' : ''}">Items</a></li>
                 <li><a th:href="@{/admin/audit}" th:class="${activePage == 'audit' ? 'is-active' : ''}">Audit</a></li>
+                <li><a th:href="@{/logout}">Log Out</a></li>
             </ul>
         </th:block>
     </div>
